fix(eureka): keep selector row aligned

--- a/packages/theme/src/_sass/site.scss
+++ b/packages/theme/src/_sass/site.scss
@@ -37,7 +37,7 @@
 }
 
 .site-nav__link-icon {
-  font-size: 1.15rem;
+  font-size: 1.35rem;
 }
 
 .icon {
@@ -49,12 +49,7 @@
 }
 
 .theme-toggle__icon {
-  font-size: 1.15rem;
-}
-
-.icon-button .icon {
-  width: 1.15em;
-  height: 1.15em;
+  font-size: 1.35rem;
 }
 
 .site-nav__link:hover,
